fixed z-index contact

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -265,7 +265,7 @@ input{
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
-    z-index: 2;
+    z-index: 12;
 
 }
 @keyframes newcontact {
