--- a/styles/contact_addtask.css
+++ b/styles/contact_addtask.css
@@ -8,7 +8,7 @@
     width: 100vw;
     position: absolute;
     overflow: auto;
-    z-index: 4;
+    z-index: 12;
 }
 input::placeholder, textarea::placeholder{
     color: lightgrey;
